kiali/gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: kiali-ingress-gateway
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway 
  servers:
    - port:
        number: 15443
        name: http-kiali
        protocol: HTTP
      hosts:
        - "*"
